--- a/ragdoll_example.ipynb
+++ b/ragdoll_example.ipynb
@@ -13,9 +13,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from dotenv import load_dotenv\n",
     "load_dotenv(override=True)"
@@ -23,9 +34,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<ragdoll.config.Config object at 0x00000206212E5750>\n",
+      "Running in a Jupyter Notebook or JupyterLab environment.\n"
+     ]
+    }
+   ],
    "source": [
     "from ragdoll.helpers import is_notebook\n",
     "from ragdoll.index import RagdollIndex\n",
@@ -61,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,9 +118,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['langchain features and benefits', 'langchain reviews and testimonials']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "search_queries = index.get_suggested_search_terms(question)\n",
     "search_queries"
@@ -108,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,9 +149,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  * https://www.marktechpost.com/2023/12/14/what-is-langchain-use-cases-and-benefits/\n",
+      "  * https://lakefs.io/blog/what-is-langchain-ml-architecture/\n",
+      "  * https://logankilpatrick.medium.com/what-is-langchain-and-why-should-i-care-as-a-developer-b2d952c42b28\n",
+      "  * https://news.ycombinator.com/item?id=36645575\n",
+      "  * https://www.reddit.com/r/aipromptprogramming/comments/13f8gjr/review_langchain_vs_huggingfaces_new_agent_system/\n",
+      "  * https://github.com/hwchase17/langchain/issues/4772\n"
+     ]
+    }
+   ],
    "source": [
     "urllist = f\"\".join(f\"\\n  * {d['href']}\" for i, d in enumerate(results))\n",
     "print(urllist)"
@@ -128,9 +173,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------------------------------------------------------------------\n",
+      "extracted 6 sites\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "https://www.marktechpost.com/2023/12/14/what-is-langchain-use-cases-and-benefits/ \n",
+      "\n",
+      " What is LangChain? Use Cases and Benefits\n",
+      "LangChain is an artificial intelligence framework designed for programmers to develop applications using large language models. It allows you to facilitate the creation of applications that consist of two key features:\n",
+      "1. Context-Awareness: LangChain enables applications to be context-aware by establishing connections between a language model and various context sources. These sources may include prompt instructions, few-shot examples, or other content t\n"
+     ]
+    }
+   ],
    "source": [
     "documents = index.get_scraped_content()\n",
     "print(\"-\" * 100)\n",
@@ -161,9 +221,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------------------------------------------------------------------\n",
+      "extracted 97 documents from 6 documents\n",
+      "----------------------------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "split_docs = index.get_split_documents(documents)\n",
     "print(\"-\" * 100)\n",
@@ -182,9 +252,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------------------------------------------------------------------\n",
+      "extracted 97 documents from 6 documents\n",
+      "----------------------------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "split_docs = index.run_index_pipeline(question)\n",
     "print(\"-\" * 100)\n",
@@ -215,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +304,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,18 +334,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#uncomment this code if you want to test with a local doc.\n",
+    "# #uncomment this code if you want to test with a local doc.\n",
     "\n",
-    "from langchain.docstore.document import Document\n",
+    "# from langchain.docstore.document import Document\n",
     "\n",
-    "split_docs = [\n",
-    "    Document(page_content=\"LangChain is a framework designed to simplify the creation of applications using large language models. As a language model integration framework, LangChain's use-cases largely overlap with those of language models in general, including document analysis and summarization, chatbots, and code analysis.\", metadata={'source': 'wikipedia'})\n",
-    "]"
+    "# split_docs = [\n",
+    "#     Document(page_content=\"LangChain is a framework designed to simplify the creation of applications using large language models. As a language model integration framework, LangChain's use-cases largely overlap with those of language models in general, including document analysis and summarization, chatbots, and code analysis.\", metadata={'source': 'wikipedia'})\n",
+    "# ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -282,14 +362,15 @@
      "output_type": "stream",
      "text": [
       "----------------------------------------------------------------------------------------------------\n",
-      "The similarity store returned 1 relevant documents. below is a snippet:\n",
+      "The similarity store returned 4 relevant documents. below is a snippet:\n",
       "---------------------------------------------------------------------------------------------------- \n",
       "\n",
       "\n",
-      "Source: wikipedia\n",
-      "Title: None\n",
-      "Content: LangChain is a framework designed to simplify the creation of applications using large language models. As a language model integration framework, LangChain's use-cases largely overlap with those of language models in general, including document analysis and summarization, chatbots, and code analysis.\n",
-      "\n"
+      "Source: https://www.marktechpost.com/2023/12/14/what-is-langchain-use-cases-and-benefits/\n",
+      "Title: What is LangChain? Use Cases and Benefits - MarkTechPost\n",
+      "Content: What is LangChain? Use Cases and Benefits\n",
+      "LangChain is an artificial intelligence framework designed for programmers to develop applications using large language models. It allows you to facilitate the creation of applications that consist of two key features:\n",
+      "1. Context-Awareness: LangChain enables applications to be context-aware by \n"
      ]
     }
    ],
@@ -313,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -332,14 +413,15 @@
      "output_type": "stream",
      "text": [
       "----------------------------------------------------------------------------------------------------\n",
-      "The retriever returned 1 relevant documents. below is a snippet:\n",
+      "The retriever returned 4 relevant documents. below is a snippet:\n",
       "---------------------------------------------------------------------------------------------------- \n",
       "\n",
       "\n",
-      "Source: wikipedia\n",
-      "Title: None\n",
-      "Content: LangChain is a framework designed to simplify the creation of applications using large language models. As a language model integration framework, LangChain's use-cases largely overlap with those of language models in general, including document analysis and summarization, chatbots, and code analysis.\n",
-      "\n"
+      "Source: https://www.marktechpost.com/2023/12/14/what-is-langchain-use-cases-and-benefits/\n",
+      "Title: What is LangChain? Use Cases and Benefits - MarkTechPost\n",
+      "Content: What is LangChain? Use Cases and Benefits\n",
+      "LangChain is an artificial intelligence framework designed for programmers to develop applications using large language models. It allows you to facilitate the creation of applications that consist of two key features:\n",
+      "1. Context-Awareness: LangChain enables applications to be context-aware by \n"
      ]
     }
    ],
@@ -355,7 +437,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Multiquery retrieval"
+    "## Multiquery retrieval"
    ]
   },
   {
@@ -367,17 +449,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ragdoll.cfg.base_retriever='MULTI_QUERY'\n",
-    "retriever = ragdoll.get_retriever() \n"
+    "retriever = ragdoll.get_mq_retriever() \n",
+    "# we can do this because the vector db has already been created\n",
+    "#if we havent run get_db yet, we can simply create the retriever with ragdoll.get_retriever(documents=split_docs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -385,14 +468,13 @@
      "output_type": "stream",
      "text": [
       "----------------------------------------------------------------------------------------------------\n",
-      "The retriever returned 1 relevant documents. below is a snippet:\n",
+      "The retriever returned 6 relevant documents. below is a snippet:\n",
       "---------------------------------------------------------------------------------------------------- \n",
       "\n",
       "\n",
-      "Source: wikipedia\n",
-      "Title: None\n",
-      "Content: LangChain is a framework designed to simplify the creation of applications using large language models. As a language model integration framework, LangChain's use-cases largely overlap with those of language models in general, including document analysis and summarization, chatbots, and code analysis.\n",
-      "\n"
+      "Source: https://www.marktechpost.com/2023/12/14/what-is-langchain-use-cases-and-benefits/\n",
+      "Title: What is LangChain? Use Cases and Benefits - MarkTechPost\n",
+      "Content: LangChain is super handy because it allows us to use language models to work with databases without manually writing complex SQL queries. It’s like having a conversation with the database, making it easier to get the information we need. This feature opens up possibilities for creating chatbots that can answer questions based on databa\n"
      ]
     }
    ],
@@ -405,11 +487,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Contextual Compression Retriever\n",
+    "\n",
+    "One challenge with retrieval is that usually you don’t know the specific queries your document storage system will face when you ingest data into the system. This means that the information most relevant to a query may be buried in a document with a lot of irrelevant text. Passing that full document through your application can lead to more expensive LLM calls and poorer responses.\n",
+    "\n",
+    "Contextual compression is meant to fix this. The idea is simple: instead of immediately returning retrieved documents as-is, you can compress them using the context of the given query, so that only the relevant information is returned. “Compressing” here refers to both compressing the contents of an individual document and filtering out documents wholesale.\n",
+    "\n",
+    "To use the Contextual Compression Retriever, you’ll need: - a base retriever (either the standard or multi query) - and a Document Compressor\n",
+    "\n",
+    "The Contextual Compression Retriever passes queries to the base retriever, takes the initial documents and passes them through the Document Compressor. The Document Compressor takes a list of documents and shortens it by reducing the contents of documents or dropping documents altogether\n",
+    "\n",
+    "We could do this with recursive calls to an LLM but this is expensive and slow. The EmbeddingsFilter provides a cheaper and faster option by embedding the documents and query and only returning those documents which have sufficiently similar embeddings to the query.\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -420,14 +512,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": []
