--- a/ragdoll_example.ipynb
+++ b/ragdoll_example.ipynb
@@ -28,6 +28,7 @@
     }
    ],
    "source": [
+    "import logging\n",
     "from dotenv import load_dotenv\n",
     "load_dotenv(override=True)"
    ]
@@ -36,12 +37,21 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ragdoll.helpers import set_logger\n",
+    "loginfo = set_logger()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<ragdoll.config.Config object at 0x00000206212E5750>\n",
       "Running in a Jupyter Notebook or JupyterLab environment.\n"
      ]
     }
@@ -50,10 +60,8 @@
     "from ragdoll.helpers import is_notebook\n",
     "from ragdoll.index import RagdollIndex\n",
     "\n",
-    "index= RagdollIndex({'enable_logging':True})\n",
-    "\n",
-    "print(index.get_config())\n",
-    "check_notebook = is_notebook(print_output=True)"
+    "index= RagdollIndex({'log_level':logging.INFO})\n",
+    "check_notebook = is_notebook(print_output=True)\n"
    ]
   },
   {
@@ -81,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +98,7 @@
     "\n",
     "    ragdoll_index_module = importlib.import_module(\"ragdoll.index\")  # Assuming the module exists\n",
     "    importlib.reload(ragdoll_index_module)\n",
-    "    index= RagdollIndex({'enable_logging':True})"
+    "    index= RagdollIndex({'log_level':logging.WARN})"
    ]
   },
   {
@@ -102,11 +110,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "question = \"tell me more about langchain\"\n"
+    "question = \"tell me more about langchain\""
    ]
   },
   {
@@ -118,16 +126,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m[index] Fetching suggested search terms for the query\u001b[0m\n",
+      "\u001b[32m[index] 👨‍💻 Generating potential search queries with prompt:\n",
+      " tell me more about langchain\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m[index] 👨‍💻 Generated potential search queries: [\"langchain features and benefits\", \"langchain reviews and testimonials\"]\u001b[0m\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "['langchain features and benefits', 'langchain reviews and testimonials']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,9 +163,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m[index]   🌐 Searching with query langchain features and benefits...\u001b[0m\n",
+      "\u001b[32m[index]   🌐 Searching with query langchain reviews and testimonials...\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "results=index.get_search_results(search_queries)\n",
     "#can also access this via index.search_results or get the urls only with index.url_list"
@@ -149,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -173,9 +206,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m[index] Fetching content URLs\u001b[0m\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -221,9 +261,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m[index] Chunking document\u001b[0m\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -252,9 +299,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m[index] Running index pipeline\u001b[0m\n",
+      "\u001b[32m[index] Fetching suggested search terms for the query\u001b[0m\n",
+      "\u001b[32m[index] 👨‍💻 Generating potential search queries with prompt:\n",
+      " tell me more about langchain\u001b[0m\n",
+      "\u001b[32m[index] 👨‍💻 Generated potential search queries: [\"langchain features and benefits\", \"langchain reviews and testimonials\"]\u001b[0m\n",
+      "\u001b[32m[index]   🌐 Searching with query langchain features and benefits...\u001b[0m\n",
+      "\u001b[32m[index]   🌐 Searching with query langchain reviews and testimonials...\u001b[0m\n",
+      "\u001b[32m[index] Fetching content URLs\u001b[0m\n",
+      "\u001b[32m[index] Chunking document\u001b[0m\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -295,28 +357,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from dotenv import load_dotenv\n",
-    "load_dotenv(override=True)\n",
-    "\n",
     "from ragdoll.retriever import RagdollRetriever\n",
     "\n",
-    "ragdoll = RagdollRetriever(config={'enable_logging':True})\n",
-    "ragdoll.cfg.enable_logging"
+    "ragdoll = RagdollRetriever(config={'log_level':logging.WARN})"
    ]
   },
   {
@@ -330,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -449,18 +496,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "retriever = ragdoll.get_mq_retriever() \n",
+    "mq_retriever = ragdoll.get_mq_retriever() \n",
     "# we can do this because the vector db has already been created\n",
     "#if we havent run get_db yet, we can simply create the retriever with ragdoll.get_retriever(documents=split_docs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +526,7 @@
     }
    ],
    "source": [
-    "simdocs = retriever.get_relevant_documents(\"what is langchain\")\n",
+    "simdocs = mq_retriever.get_relevant_documents(\"what is langchain\")\n",
     "print(\"-\" * 100)\n",
     "print(f\"The retriever returned {len(simdocs)} relevant documents. below is a snippet:\")\n",
     "print(\"-\" * 100, \"\\n\\n\")\n",
@@ -505,21 +552,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cc_retriever = ragdoll.get_compression_retriever(retriever)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------------------------------------------------------------------\n",
+      "The retriever returned 6 relevant documents. below is a snippet:\n",
+      "---------------------------------------------------------------------------------------------------- \n",
+      "\n",
+      "\n",
+      "Source: https://www.marktechpost.com/2023/12/14/what-is-langchain-use-cases-and-benefits/\n",
+      "Title: What is LangChain? Use Cases and Benefits - MarkTechPost\n",
+      "Content: LangChain is super handy because it allows us to use language models to work with databases without manually writing complex SQL queries. It’s like having a conversation with the database, making it easier to get the information we need. This feature opens up possibilities for creating chatbots that can answer questions based on databa\n"
+     ]
+    }
+   ],
+   "source": [
+    "simdocs = mq_retriever.get_relevant_documents(\"what is langchain\")\n",
+    "print(\"-\" * 100)\n",
+    "print(f\"The retriever returned {len(simdocs)} relevant documents. below is a snippet:\")\n",
+    "print(\"-\" * 100, \"\\n\\n\")\n",
+    "print(pretty_print_docs(simdocs, for_llm=False)[:500])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": []
