--- a/ragdoll_example.ipynb
+++ b/ragdoll_example.ipynb
@@ -60,7 +60,7 @@
     "from ragdoll.helpers import is_notebook\n",
     "from ragdoll.index import RagdollIndex\n",
     "\n",
-    "index= RagdollIndex({'log_level':logging.INFO})\n",
+    "index= RagdollIndex({'log_level':logging.WARN})\n",
     "check_notebook = is_notebook(print_output=True)\n"
    ]
   },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,32 +126,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m[index] Fetching suggested search terms for the query\u001b[0m\n",
-      "\u001b[32m[index] 👨‍💻 Generating potential search queries with prompt:\n",
-      " tell me more about langchain\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m[index] 👨‍💻 Generated potential search queries: [\"langchain features and benefits\", \"langchain reviews and testimonials\"]\u001b[0m\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "['langchain features and benefits', 'langchain reviews and testimonials']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,18 +147,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m[index]   🌐 Searching with query langchain features and benefits...\u001b[0m\n",
-      "\u001b[32m[index]   🌐 Searching with query langchain reviews and testimonials...\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "results=index.get_search_results(search_queries)\n",
     "#can also access this via index.search_results or get the urls only with index.url_list"
@@ -182,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -206,16 +181,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m[index] Fetching content URLs\u001b[0m\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -261,16 +229,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m[index] Chunking document\u001b[0m\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -299,24 +260,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m[index] Running index pipeline\u001b[0m\n",
-      "\u001b[32m[index] Fetching suggested search terms for the query\u001b[0m\n",
-      "\u001b[32m[index] 👨‍💻 Generating potential search queries with prompt:\n",
-      " tell me more about langchain\u001b[0m\n",
-      "\u001b[32m[index] 👨‍💻 Generated potential search queries: [\"langchain features and benefits\", \"langchain reviews and testimonials\"]\u001b[0m\n",
-      "\u001b[32m[index]   🌐 Searching with query langchain features and benefits...\u001b[0m\n",
-      "\u001b[32m[index]   🌐 Searching with query langchain reviews and testimonials...\u001b[0m\n",
-      "\u001b[32m[index] Fetching content URLs\u001b[0m\n",
-      "\u001b[32m[index] Chunking document\u001b[0m\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -357,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +370,7 @@
    "source": [
     "from ragdoll.helpers import pretty_print_docs\n",
     "\n",
-    "simdocs = db.similarity_search('tell me about langchain')\n",
+    "simdocs = db.similarity_search(question)\n",
     "\n",
     "print(\"-\" * 100)\n",
     "print(f\"The similarity store returned {len(simdocs)} relevant documents. below is a snippet:\")\n",
@@ -441,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +419,7 @@
     }
    ],
    "source": [
-    "simdocs = retriever.get_relevant_documents(\"what is langchain\")\n",
+    "simdocs = retriever.get_relevant_documents(question)\n",
     "print(\"-\" * 100)\n",
     "print(f\"The retriever returned {len(simdocs)} relevant documents. below is a snippet:\")\n",
     "print(\"-\" * 100, \"\\n\\n\")\n",
@@ -496,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -569,18 +515,23 @@
      "output_type": "stream",
      "text": [
       "----------------------------------------------------------------------------------------------------\n",
-      "The retriever returned 6 relevant documents. below is a snippet:\n",
+      "The retriever returned 4 relevant documents. below is a snippet:\n",
       "---------------------------------------------------------------------------------------------------- \n",
       "\n",
       "\n",
-      "Source: https://www.marktechpost.com/2023/12/14/what-is-langchain-use-cases-and-benefits/\n",
-      "Title: What is LangChain? Use Cases and Benefits - MarkTechPost\n",
-      "Content: LangChain is super handy because it allows us to use language models to work with databases without manually writing complex SQL queries. It’s like having a conversation with the database, making it easier to get the information we need. This feature opens up possibilities for creating chatbots that can answer questions based on databa\n"
+      "Source: https://lakefs.io/blog/what-is-langchain-ml-architecture/\n",
+      "Title: What Is LangChain: Components, Benefits & How to Get Started\n",
+      "Content: For an optimal experience, provide your email below and one of our lifeguards will send you a link to start swimming in the lake!\n",
+      "What Is LangChain: Components, Benefits & How to Get Started\n",
+      "Home > Blog > What Is LangChain: Components, Benefits & How to Get Started\n",
+      "Idan has an extensive background in software and DevOps engineering....\n",
+      "Table of Contents\n",
+      "L\n"
      ]
     }
    ],
    "source": [
-    "simdocs = mq_retriever.get_relevant_documents(\"what is langchain\")\n",
+    "simdocs = mq_retriever.get_relevant_documents(question)\n",
     "print(\"-\" * 100)\n",
     "print(f\"The retriever returned {len(simdocs)} relevant documents. below is a snippet:\")\n",
     "print(\"-\" * 100, \"\\n\\n\")\n",
@@ -588,11 +539,47 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Question Answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LangChain is an artificial intelligence framework designed for programmers to develop applications using large language models. It offers several key features that make it versatile and useful for developers.\n",
+      "\n",
+      "One of the main features of LangChain is its context-awareness capability. It allows applications to establish connections between a language model and various context sources. This means that developers can create applications that are aware of the context in which they are being used, making them more intelligent and responsive.\n",
+      "\n",
+      "LangChain also provides standardized interfaces that are easy to use and can be extended. This makes integration with other tools and systems seamless and efficient. It essentially provides a common language for applications, simplifying the development process.\n",
+      "\n",
+      "The framework is available in Python and TypeScript/JavaScript, making it accessible to a wide range of developers. It also offers templates that serve as reference architectures and starting points for application development. This streamlines the entire application lifecycle, from development to productionization to deployment.\n",
+      "\n",
+      "LangChain enables developers to build applications like chatbots or question-answering systems. It allows them to ask for information step by step, making the development process more intuitive and user-friendly.\n",
+      "\n",
+      "In addition to these features, LangChain offers a model agnostic toolset. This allows companies and developers to explore multiple large language model (LLM) offerings and test what works best for their specific use cases. It provides flexibility and adaptability in choosing the most suitable language model for a given application.\n",
+      "\n",
+      "LangChain also facilitates easy integration with outside data sources, making conversations with language models more interesting and full of context. It can connect with SQL databases using natural language, allowing developers to ask questions or give commands in a more human-like way. LangChain then translates these queries into SQL queries, making it easier to retrieve the desired information from the database.\n",
+      "\n",
+      "This feature opens up possibilities for creating chatbots that can answer questions based on database data and even build custom dashboards for data analysis. It is particularly useful for developers working with enterprise data stored in SQL databases, as it eliminates the need for manually writing complex SQL queries.\n",
+      "\n",
+      "Another advantage of LangChain is its community. It provides a platform where developers can help each other and share ideas. This community aspect is particularly important for open-source projects like LangChain, as it fosters collaboration and innovation.\n",
+      "\n",
+      "Overall, LangChain is a powerful tool for developers looking to leverage large language models in their applications. Its context-awareness, easy integration, and support for multiple language models make it a versatile framework. It simplifies the development process and enables the creation of intelligent and dynamic applications.\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = ragdoll.answer_me_this(question, cc_retriever)\n",
+    "print(response)"
+   ]
   },
   {
    "cell_type": "code",
