added example for pdf document interrogation

--- a/ragdoll_example.ipynb
+++ b/ragdoll_example.ipynb
@@ -50,8 +50,7 @@
    "outputs": [],
    "source": [
     "config={\n",
-    "    'log_level':logging.INFO,\n",
-    "    'embeddings': 'multi-qa-MiniLM-L6-cos-v1',  \n",
+    "    'log_level':logging.INFO\n",
     "    }"
    ]
   },
